컴포넌트 추상화, observer 추가

--- a/component/state-store/index.html
+++ b/component/state-store/index.html
@@ -5,133 +5,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>
-      // class 발행기관 {
-      //   #state;
-      //   #observers = new Set();
-        
-      //   constructor(state) {
-      //     this.#state = state;
-      //     Object.keys(state).forEach(key => Object.defineProperty(this, key, {
-      //       get : () => this.#state[key]
-      //     }));
-        
-      //   }
-
-      //   내부에_변화가_생김 (newState) {
-      //     this.#state = { ...this.#state, ...newState };
-      //     this.구독자에게_알림();
-      //   }
-
-      //   구독자_등록 (subscriber) {
-      //     this.#observers.add(subscriber);
-      //   }
-
-      //   구독자에게_알림 () {
-      //     this.#observers.forEach(fn => fn());
-      //   }
-      // }
-
-      // class 구독자 {
-      //   #fn;
-
-      //   constructor(발행기관에_변화가_생길_때_하는_일) {
-      //     this.#fn = 발행기관에_변화가_생길_때_하는_일;
-      //   }
-
-      //   구독 (publisher) {
-      //     publisher.구독자_등록(this.#fn);
-      //   }
-      // }
-
-      // const state = new 발행기관({
-      //   a : 10,
-      //   b : 20,
-      // })
-
-      // const 덧셈계산기 = new 구독자(() => console.log(`a + b = ${state.a + state.b}`));
-      // const 곱셈계산기 = new 구독자(() => console.log(`a * b = ${state.a * state.b}`));
-
-      // 덧셈계산기.구독(state);
-      // 곱셈계산기.구독(state);
-
-      // state.구독자에게_알림();
-
-      // state.내부에_변화가_생김({ a : 100, b : 200 })
-
-      // console.log(state,'state');
-
-      // let a = 10;
-  
-      // const 상태 = {};
-      // Object.defineProperty(상태, 'a', {
-      //   get () {
-      //     console.log(`현재 a의 값은 ${a} 입니다.`)
-      //     return a;
-      //   },
-      //   set (value) {
-      //     a = value;
-      //     console.log(`변경된 a의 값은 ${a} 입니다.`)
-      //   }
-      // });
-
-      // console.log(`state.a = ${상태.a}`);
-      // 상태.a = 100;
-
-      //여러개의 속성이 있을 때 관리 
-      // const state = {
-      //   a : 10,
-      //   b : 20,
-      // }
-      // const stateKeys = Object.keys(state);
-
-      // for ( const key of stateKeys) {
-      //   let _value = state[key];
-      //   Object.defineProperty(state, key, {
-      //     get() {
-      //       console.log(`현재 state.${key}의 값은 ${_value}입니다.`);
-      //       return _value;
-      //     },
-      //     set (value) {
-      //       _value = value;
-      //       console.log(`변경된 state.${key}의 값은 ${_value}입니다.`);
-      //     }
-      //   })
-      // }
-      
-      let currentObserver = null;
-
-      const observe = fn => {
-        currentObserver = fn;
-        fn();
-        currentObserver = null;
-      }
-
-      const observable = obj => {
-        Object.keys(obj).forEach(key => {
-          let _value = obj[key];
-          const observers = new Set();
-
-          Object.defineProperty(obj, key, {
-            get () {
-              if (currentObserver) observers.add(currentObserver);
-              return _value;
-            },
-
-            set (value) {
-              _value = value;
-              observers.forEach(fn => fn());
-            }
-          })
-        })
-        return obj;
-      }
-
-
-
-
-            
-    </script>
+    <script type="module" src="./src/main.js"></script>
     
   </body>
 </html>
